--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2278,7 +2278,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    return 3 * 6"
+    "    "
    ]
   },
   {
@@ -2288,7 +2288,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    return"
+    "    pass"
    ]
   },
   {
