--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2550,7 +2550,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return (term[1]*term[0], term[1]-1, term[2])"
+    "    pass"
    ]
   },
   {
