--- a/index.ipynb
+++ b/index.ipynb
@@ -2583,9 +2583,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, -1, 1)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = (1, 0, 1)\n",
     "term_df_dx(y) # (0, -1, 1)"
@@ -2612,7 +2623,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    pass"
+    "    return list"
    ]
   },
   {
