--- a/index.ipynb
+++ b/index.ipynb
@@ -2661,7 +2661,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return "
+    "    return (term[2]*term[0], term[1], term[2]-1)"
    ]
   },
   {
